# coqui-server

./: .gitignore  Dockerfile  app.py  docker-compose.yml  export.sh  pixi.toml  pyproject.toml  requirements.txt  test.py
src/coqui_server/: app.py
