[project]
authors = [{name = "T145", email = "T145@protonmail.com"}]
dependencies = ["tts @ git+https://github.com/coqui-ai/TTS", "ruff>=0.7.2,<0.8", "fastapi[standard]>=0.115.4,<0.116", "aiofiles", "demoji>=1.1.0,<2", "pyflac>=3.0.0,<4"]
description = "Coqui TTS API server"
name = "coqui-server"
requires-python = "> 3.9, < 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["nvidia", "conda-forge", "pytorch", "xformers"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
coqui_server = { path = ".", editable = true }

[tool.pixi.tasks]
start-dev = "fastapi dev src/coqui_server/app.py"
start-prod = "fastapi run src/coqui_server/app.py"

# The TTS install handles pytorch, torchaudio, and triton
[tool.pixi.dependencies]
pytorch-cuda = "12.4.*"

[tool.ruff]
exclude = [".pixi"]
ignore = ["E501", "E402"]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Warnings
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-quotes
    "Q",
    # flake8-async
    "ASYNC"
]
line-length = 132

[tool.hatch]
metadata.allow-direct-references = true
